--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@auth0/angular-jwt": "^4.1.2",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@swimlane/ngx-charts": "^13.0.2",
     "@swimlane/ngx-datatable": "^16.0.3",
+    "alertifyjs": "^1.13.1",
     "angular-calendar": "^0.28.5",
     "angularx-flatpickr": "^6.3.1",
     "bootstrap": "^4.4.1",
