--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase": "^7.14.0",
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
+    "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
