--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
     "ng2-file-upload": "^1.4.0",
+    "ngx-bootstrap": "^5.6.1",
     "ngx-timeago": "^1.0.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
